--- a/dokumentointi/checkstyle/xref/allclasses-frame.html
+++ b/dokumentointi/checkstyle/xref/allclasses-frame.html
@@ -12,7 +12,10 @@
 
 		<ul>
 						<li>
-				<a href="org/janitor/tetris/model/Board.html" target="classFrame">Board</a>
+				<a href="org/janitor/tetris/model/tetrominos/BlockShape.html" target="classFrame">BlockShape</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/grid/Board.html" target="classFrame">Board</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/ui/Character.html" target="classFrame">Character</a>
@@ -21,25 +24,37 @@
 				<a href="org/janitor/tetris/ui/CharacterPosition.html" target="classFrame">CharacterPosition</a>
 			</li>
 						<li>
-				<a href="org/janitor/tetris/model/Game.html" target="classFrame">Game</a>
+				<a href="org/janitor/tetris/model/game/Game.html" target="classFrame">Game</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/ui/GameBoard.html" target="classFrame">GameBoard</a>
 			</li>
 						<li>
-				<a href="org/janitor/tetris/model/GameTickTask.html" target="classFrame">GameTickTask</a>
+				<a href="org/janitor/tetris/model/game/GameTickTask.html" target="classFrame">GameTickTask</a>
 			</li>
 						<li>
-				<a href="org/janitor/tetris/model/GridPosition.html" target="classFrame">GridPosition</a>
+				<a href="org/janitor/tetris/model/grid/GridPosition.html" target="classFrame">GridPosition</a>
 			</li>
 						<li>
-				<a href="org/janitor/tetris/model/tetrominos/L.html" target="classFrame">L</a>
+				<a href="org/janitor/tetris/model/tetrominos/InverseLShape.html" target="classFrame">InverseLShape</a>
 			</li>
 						<li>
-				<a href="org/janitor/tetris/model/Movement.html" target="classFrame">Movement</a>
+				<a href="org/janitor/tetris/model/tetrominos/LShape.html" target="classFrame">LShape</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/tetrominos/LineShape.html" target="classFrame">LineShape</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/game/Movement.html" target="classFrame">Movement</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/ui/Position.html" target="classFrame">Position</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/tetrominos/SShape.html" target="classFrame">SShape</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/tetrominos/TShape.html" target="classFrame">TShape</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/Tetris.html" target="classFrame">Tetris</a>
@@ -48,10 +63,13 @@
 				<a href="org/janitor/tetris/model/tetrominos/Tetromino.html" target="classFrame">Tetromino</a>
 			</li>
 						<li>
-				<a href="org/janitor/tetris/model/TetrominoRandomizer.html" target="classFrame">TetrominoRandomizer</a>
+				<a href="org/janitor/tetris/model/game/TetrominoRandomizer.html" target="classFrame">TetrominoRandomizer</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/ui/Window.html" target="classFrame">Window</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/tetrominos/ZShape.html" target="classFrame">ZShape</a>
 			</li>
 			      </ul>
 
