--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/model/grid/package-summary.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/model/grid/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model.tetrominos</title>
+		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model.grid</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package org.janitor.tetris.model.tetrominos</h2>
+		      	<h2>Package org.janitor.tetris.model.grid</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,42 +37,12 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="BlockShape.html" target="classFrame">BlockShape</a>
+                		<a href="Board.html" target="classFrame">Board</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="InverseLShape.html" target="classFrame">InverseLShape</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="LShape.html" target="classFrame">LShape</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="LineShape.html" target="classFrame">LineShape</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="SShape.html" target="classFrame">SShape</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="TShape.html" target="classFrame">TShape</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="Tetromino.html" target="classFrame">Tetromino</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="ZShape.html" target="classFrame">ZShape</a>
+                		<a href="GridPosition.html" target="classFrame">GridPosition</a>
               		</td>
             	</tr>
 				        	</tbody>
