--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/model/tetrominos/package-frame.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/model/tetrominos/package-frame.html
@@ -16,10 +16,28 @@
 
       	<ul>
       		          	<li>
-            	<a href="L.html" target="classFrame">L</a>
+            	<a href="BlockShape.html" target="classFrame">BlockShape</a>
+          	</li>
+          	          	<li>
+            	<a href="InverseLShape.html" target="classFrame">InverseLShape</a>
+          	</li>
+          	          	<li>
+            	<a href="LShape.html" target="classFrame">LShape</a>
+          	</li>
+          	          	<li>
+            	<a href="LineShape.html" target="classFrame">LineShape</a>
+          	</li>
+          	          	<li>
+            	<a href="SShape.html" target="classFrame">SShape</a>
+          	</li>
+          	          	<li>
+            	<a href="TShape.html" target="classFrame">TShape</a>
           	</li>
           	          	<li>
             	<a href="Tetromino.html" target="classFrame">Tetromino</a>
+          	</li>
+          	          	<li>
+            	<a href="ZShape.html" target="classFrame">ZShape</a>
           	</li>
           	      	</ul>
 
