--- a/dokumentointi/checkstyle/xref/overview-frame.html
+++ b/dokumentointi/checkstyle/xref/overview-frame.html
@@ -19,7 +19,10 @@
 				<a href="org/janitor/tetris/package-frame.html" target="packageFrame">org.janitor.tetris</a>
 			</li>
 						<li>
-				<a href="org/janitor/tetris/model/package-frame.html" target="packageFrame">org.janitor.tetris.model</a>
+				<a href="org/janitor/tetris/model/game/package-frame.html" target="packageFrame">org.janitor.tetris.model.game</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/grid/package-frame.html" target="packageFrame">org.janitor.tetris.model.grid</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/model/tetrominos/package-frame.html" target="packageFrame">org.janitor.tetris.model.tetrominos</a>
