--- a/dokumentointi/checkstyle/xref/overview-summary.html
+++ b/dokumentointi/checkstyle/xref/overview-summary.html
@@ -40,7 +40,12 @@
             	</tr>
 	          	            	<tr>
               		<td>
-                		<a href="org/janitor/tetris/model/package-summary.html">org.janitor.tetris.model</a>
+                		<a href="org/janitor/tetris/model/game/package-summary.html">org.janitor.tetris.model.game</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="org/janitor/tetris/model/grid/package-summary.html">org.janitor.tetris.model.grid</a>
               		</td>
             	</tr>
 	          	            	<tr>
