--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/model/game/package-frame.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/model/game/package-frame.html
@@ -3,29 +3,23 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model</title>
-		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
+		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model.game</title>
+		<link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
 
 		<h3>
-        	<a href="package-summary.html" target="classFrame">org.janitor.tetris.model</a>
+        	<a href="package-summary.html" target="classFrame">org.janitor.tetris.model.game</a>
       	</h3>
 
       	<h3>Classes</h3>
 
       	<ul>
       		          	<li>
-            	<a href="Board.html" target="classFrame">Board</a>
-          	</li>
-          	          	<li>
             	<a href="Game.html" target="classFrame">Game</a>
           	</li>
           	          	<li>
             	<a href="GameTickTask.html" target="classFrame">GameTickTask</a>
-          	</li>
-          	          	<li>
-            	<a href="GridPosition.html" target="classFrame">GridPosition</a>
           	</li>
           	          	<li>
             	<a href="Movement.html" target="classFrame">Movement</a>
