--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/model/game/package-summary.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/model/game/package-summary.html
@@ -3,14 +3,14 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model</title>
-		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
+		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model.game</title>
+		<link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
 		      	<div class="overview">
         	<ul>
           		<li>
-            		<a href="../../../../overview-summary.html">Overview</a>
+            		<a href="../../../../../overview-summary.html">Overview</a>
           		</li>
           		<li class="selected">Package</li>
         	</ul>
@@ -18,7 +18,7 @@
       	<div class="framenoframe">
         	<ul>
           		<li>
-            		<a href="../../../../index.html" target="_top">FRAMES</a>
+            		<a href="../../../../../index.html" target="_top">FRAMES</a>
           		</li>
           		<li>
             		<a href="package-summary.html" target="_top">NO FRAMES</a>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package org.janitor.tetris.model</h2>
+		      	<h2>Package org.janitor.tetris.model.game</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,22 +37,12 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="Board.html" target="classFrame">Board</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
                 		<a href="Game.html" target="classFrame">Game</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
                 		<a href="GameTickTask.html" target="classFrame">GameTickTask</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="GridPosition.html" target="classFrame">GridPosition</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -71,7 +61,7 @@
 		      	<div class="overview">
         	<ul>
           		<li>
-            		<a href="../../../../overview-summary.html">Overview</a>
+            		<a href="../../../../../overview-summary.html">Overview</a>
           		</li>
           		<li class="selected">Package</li>
         	</ul>
@@ -79,7 +69,7 @@
       	<div class="framenoframe">
         	<ul>
           		<li>
-            		<a href="../../../../index.html" target="_top">FRAMES</a>
+            		<a href="../../../../../index.html" target="_top">FRAMES</a>
           		</li>
           		<li>
             		<a href="package-summary.html" target="_top">NO FRAMES</a>
