Final changes to deadline 6

--- a/dokumentointi/checkstyle/xref/allclasses-frame.html
+++ b/dokumentointi/checkstyle/xref/allclasses-frame.html
@@ -24,10 +24,22 @@
 				<a href="org/janitor/tetris/ui/CharacterPosition.html" target="classFrame">CharacterPosition</a>
 			</li>
 						<li>
+				<a href="org/janitor/tetris/model/event/Event.html" target="classFrame">Event</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/event/EventDispatcher.html" target="classFrame">EventDispatcher</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/event/EventListener.html" target="classFrame">EventListener</a>
+			</li>
+						<li>
 				<a href="org/janitor/tetris/model/game/Game.html" target="classFrame">Game</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/ui/GameBoard.html" target="classFrame">GameBoard</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/game/GameManager.html" target="classFrame">GameManager</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/model/game/GameTickTask.html" target="classFrame">GameTickTask</a>
@@ -49,6 +61,9 @@
 			</li>
 						<li>
 				<a href="org/janitor/tetris/ui/Position.html" target="classFrame">Position</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/model/grid/RemovedRowsResult.html" target="classFrame">RemovedRowsResult</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/model/tetrominos/SShape.html" target="classFrame">SShape</a>
