--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/model/game/package-frame.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/model/game/package-frame.html
@@ -19,6 +19,9 @@
             	<a href="Game.html" target="classFrame">Game</a>
           	</li>
           	          	<li>
+            	<a href="GameManager.html" target="classFrame">GameManager</a>
+          	</li>
+          	          	<li>
             	<a href="GameTickTask.html" target="classFrame">GameTickTask</a>
           	</li>
           	          	<li>
