--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/model/game/package-summary.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/model/game/package-summary.html
@@ -42,6 +42,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="GameManager.html" target="classFrame">GameManager</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="GameTickTask.html" target="classFrame">GameTickTask</a>
               		</td>
             	</tr>
