--- a/dokumentointi/checkstyle/xref/overview-frame.html
+++ b/dokumentointi/checkstyle/xref/overview-frame.html
@@ -19,6 +19,9 @@
 				<a href="org/janitor/tetris/package-frame.html" target="packageFrame">org.janitor.tetris</a>
 			</li>
 						<li>
+				<a href="org/janitor/tetris/model/event/package-frame.html" target="packageFrame">org.janitor.tetris.model.event</a>
+			</li>
+						<li>
 				<a href="org/janitor/tetris/model/game/package-frame.html" target="packageFrame">org.janitor.tetris.model.game</a>
 			</li>
 						<li>
