--- a/dokumentointi/checkstyle/xref/overview-summary.html
+++ b/dokumentointi/checkstyle/xref/overview-summary.html
@@ -40,6 +40,11 @@
             	</tr>
 	          	            	<tr>
               		<td>
+                		<a href="org/janitor/tetris/model/event/package-summary.html">org.janitor.tetris.model.event</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
                 		<a href="org/janitor/tetris/model/game/package-summary.html">org.janitor.tetris.model.game</a>
               		</td>
             	</tr>
