--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/model/event/package-frame.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/model/event/package-frame.html
@@ -3,26 +3,26 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model.grid</title>
+		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model.event</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
 
 		<h3>
-        	<a href="package-summary.html" target="classFrame">org.janitor.tetris.model.grid</a>
+        	<a href="package-summary.html" target="classFrame">org.janitor.tetris.model.event</a>
       	</h3>
 
       	<h3>Classes</h3>
 
       	<ul>
       		          	<li>
-            	<a href="Board.html" target="classFrame">Board</a>
+            	<a href="Event.html" target="classFrame">Event</a>
           	</li>
           	          	<li>
-            	<a href="GridPosition.html" target="classFrame">GridPosition</a>
+            	<a href="EventDispatcher.html" target="classFrame">EventDispatcher</a>
           	</li>
           	          	<li>
-            	<a href="RemovedRowsResult.html" target="classFrame">RemovedRowsResult</a>
+            	<a href="EventListener.html" target="classFrame">EventListener</a>
           	</li>
           	      	</ul>
 
