--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/model/event/package-summary.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/model/event/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model.grid</title>
+		<title>tetris 1.0-SNAPSHOT Reference Package org.janitor.tetris.model.event</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package org.janitor.tetris.model.grid</h2>
+		      	<h2>Package org.janitor.tetris.model.event</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,17 +37,17 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="Board.html" target="classFrame">Board</a>
+                		<a href="Event.html" target="classFrame">Event</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="GridPosition.html" target="classFrame">GridPosition</a>
+                		<a href="EventDispatcher.html" target="classFrame">EventDispatcher</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="RemovedRowsResult.html" target="classFrame">RemovedRowsResult</a>
+                		<a href="EventListener.html" target="classFrame">EventListener</a>
               		</td>
             	</tr>
 				        	</tbody>
