--- a/dokumentointi/checkstyle/xref/allclasses-frame.html
+++ b/dokumentointi/checkstyle/xref/allclasses-frame.html
@@ -24,22 +24,10 @@
 				<a href="org/janitor/tetris/ui/CharacterPosition.html" target="classFrame">CharacterPosition</a>
 			</li>
 						<li>
-				<a href="org/janitor/tetris/model/event/Event.html" target="classFrame">Event</a>
-			</li>
-						<li>
-				<a href="org/janitor/tetris/model/event/EventDispatcher.html" target="classFrame">EventDispatcher</a>
-			</li>
-						<li>
-				<a href="org/janitor/tetris/model/event/EventListener.html" target="classFrame">EventListener</a>
-			</li>
-						<li>
 				<a href="org/janitor/tetris/model/game/Game.html" target="classFrame">Game</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/ui/GameBoard.html" target="classFrame">GameBoard</a>
-			</li>
-						<li>
-				<a href="org/janitor/tetris/model/game/GameManager.html" target="classFrame">GameManager</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/model/game/GameTickTask.html" target="classFrame">GameTickTask</a>
@@ -61,6 +49,9 @@
 			</li>
 						<li>
 				<a href="org/janitor/tetris/ui/Position.html" target="classFrame">Position</a>
+			</li>
+						<li>
+				<a href="org/janitor/tetris/ui/RectangleBuilder.html" target="classFrame">RectangleBuilder</a>
 			</li>
 						<li>
 				<a href="org/janitor/tetris/model/grid/RemovedRowsResult.html" target="classFrame">RemovedRowsResult</a>
