--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/ui/package-frame.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/ui/package-frame.html
@@ -28,6 +28,9 @@
             	<a href="Position.html" target="classFrame">Position</a>
           	</li>
           	          	<li>
+            	<a href="RectangleBuilder.html" target="classFrame">RectangleBuilder</a>
+          	</li>
+          	          	<li>
             	<a href="Window.html" target="classFrame">Window</a>
           	</li>
           	      	</ul>
