--- a/dokumentointi/checkstyle/xref/org/janitor/tetris/ui/package-summary.html
+++ b/dokumentointi/checkstyle/xref/org/janitor/tetris/ui/package-summary.html
@@ -57,6 +57,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="RectangleBuilder.html" target="classFrame">RectangleBuilder</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Window.html" target="classFrame">Window</a>
               		</td>
             	</tr>
